# atum

./: .gitignore  CMakeLists.txt  README.md  b  build.sh
atum/: Makefile
atum/script/: test-target.sh
atum/test/: Makefile  target.c
example/: CMakeLists.txt  injector.c  payload.c  target.c  test.sh
libatum/: CMakeLists.txt  Makefile
libatum/inc/: atum.h
libatum/src/: foo.c  foo.h  inject.c  loader.h  thread.c  thread.h  trampoline.h  util.c  util.h
libatum/src/core/: inject.c  log.c  log.h
test/: CMakeLists.txt  Makefile  core.cpp  test.cpp
